# python-detailed-assistant

./: README.md  main.py
PyQt6-6.0.0/: ChangeLog  NEWS  PKG-INFO  README  project.py  pyproject.toml
PyQt6-6.0.0/config-tests/: cfgtest_QtCore.cpp  cfgtest_QtNetwork.cpp
PyQt6-6.0.0/dbus/: dbus.cpp
PyQt6-6.0.0/designer/: pluginloader.cpp  pluginloader.h
PyQt6-6.0.0/qmlscene/: pluginloader.cpp  pluginloader.h
PyQt6-6.0.0/qpy/QtCore/: qpycore_api.h  qpycore_chimera.cpp  qpycore_chimera.h  qpycore_chimera_signature.cpp  qpycore_chimera_storage.cpp  qpycore_classinfo.cpp  qpycore_classinfo.h  qpycore_decorators.cpp  qpycore_enums_flags.cpp  qpycore_enums_flags.h  qpycore_event_handlers.cpp  qpycore_event_handlers.h  qpycore_init.cpp  qpycore_misc.cpp  qpycore_misc.h  qpycore_namespace.h  qpycore_objectified_strings.h  qpycore_post_init.cpp.in  qpycore_public_api.cpp  qpycore_public_api.h  qpycore_pyqtboundsignal.cpp  qpycore_pyqtboundsignal.h  qpycore_pyqtconfigure.cpp  qpycore_pyqtmethodproxy.cpp  qpycore_pyqtmethodproxy.h  qpycore_pyqtmutexlocker.cpp  qpycore_pyqtmutexlocker.h  qpycore_pyqtproperty.cpp  qpycore_pyqtproperty.h  qpycore_pyqtpyobject.cpp  qpycore_pyqtpyobject.h  qpycore_pyqtsignal.cpp  qpycore_pyqtsignal.h  qpycore_pyqtslot.cpp  qpycore_pyqtslot.h  qpycore_pyqtslotproxy.cpp  qpycore_pyqtslotproxy.h  qpycore_qjsonvalue.cpp  qpycore_qmessagelogger.cpp  qpycore_qmetaobject.cpp  (+11 more)
PyQt6-6.0.0/qpy/QtDBus/: qpydbus_api.h  qpydbus_chimera_helpers.cpp  qpydbus_chimera_helpers.h  qpydbus_post_init.cpp  qpydbuspendingreply.cpp  qpydbuspendingreply.h  (+2 more)
(+58 files in other folders)
